--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="weekRanking">周榜</string>
     <string name="monthRanking">月榜</string>
     <string name="totalRanking">总榜</string>
+    <string name="_">—— —— —— —— ——</string>
 </resources>
