2018-12-29-14:34 Custom FirstToThree View(RankingFragment)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="monthRanking">月榜</string>
     <string name="totalRanking">总榜</string>
     <string name="_">—— —— —— —— ——</string>
+    <string name="TODO">TODO</string>
 </resources>
